<resources>
    <string name="app_name">StrAIberry</string>
    <string name="application_id">com.straiberry.android</string>
    <string name="ai_powered_dental_care">Sweet Taste of AI in Oral Hygiene</string>
    <string name="create_an_account">Create an account</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="create_with_email">Create with email</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="what_s_your_email">What’s your Email?</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="next">Next</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="it_s_an_invalid_email">It’s an Invalid Email</string>
    <string name="create_a_password">Create a password</string>
    <string name="tips_for_your_password">Tips for your password</string>
    <string name="at_least_1_lowercase_letter">At least 1 lowercase letter</string>
    <string name="at_least_1_uppercase_letter">At least 1 uppercase letter</string>
    <string name="at_least_1_number">At least 1 number</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="password_rule">Please select a password by: 8 characters,\n1 lowercase, 1 uppercase letter and 1 number</string>
    <string name="sign_up">Sign up</string>
    <string name="send_code_subtitle">An access code has been sent via email for verification</string>
    <string name="send_code_again_subtitle">A new access code has been sent via email for verification</string>
    <string name="verify_account">Account Verification</string>
    <string name="incorrect_code_title">The code is incorrect.\nA new access code has been sent via email for verification.</string>
    <string name="incorrect_code_counter">%d of 4 Try to resend</string>
    <string name="resend_again">Resend Again?</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="don_t_have_one">Don\'t have one?</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="enter_email_subtitle">Please enter your Email and we will send you a link to reset the password.</string>
    <string name="send_email">Send Email</string>
    <string name="skip">Skip</string>
    <string name="welcome_subtitle">Let’s start by answering 3 general questions about your dental health care, that brings us to help you better with your Oral Hygiene.</string>
    <string name="welcome_with_name">Welcome</string>
    <string name="welcome_question_counter">%d Of 3</string>
    <string name="question_counter">%d Of %d</string>
    <string name="yes_no_answers_counter">%d/%d</string>
    <string name="dental_issue_answers_counter">%d Added</string>
    <string name="frequency_oral_hygiene_is_performed">Frequency Oral Hygiene\nis Performed:</string>
    <string name="once_daily">Once a daily</string>
    <string name="twice_daily">Twice a daily</string>
    <string name="three_times_day">Three times a day</string>
    <string name="rarely">Rarely</string>
    <string name="method_of_oral_hygiene">Method of Oral Hygiene:</string>
    <string name="you_can_select_more_than_one_choice">You can select more than one choice</string>
    <string name="independent_manual_toothbrush">Independent, manual toothbrush</string>
    <string name="flossing">Flossing</string>
    <string name="not_flushing">Not Flushing</string>
    <string name="staff_assist_manual_toothbrush">Staff assist, manual toothbrush</string>
    <string name="independent_electric_toothbrush">Independent, electric toothbrush</string>
    <string name="oral_swabs">Oral Swabs</string>
    <string name="gum_assessment">Gum Assessment:</string>
    <string name="no_bleeding_associated_with_oral_hygiene">No bleeding</string>
    <string name="bleeding_somethings_associated_with_oral_hygience">Sometimes bleeding</string>
    <string name="bleeding_always_associated_with_oral_hygiene">Always bleeding</string>
    <string name="by_signing_up_you_accept_th">By signing up you accept the </string>
    <string name="and"> and </string>
    <string name="privacy_policy"> Privacy Policy </string>
    <string name="term_of_service"> Terms of \nService</string>
    <string name="me">Me</string>
    <string name="check_ups">Check ups:</string>
    <string name="more_dots">…</string>
    <string name="please_answer_to_question_later">Please \nanswer the Questions Later</string>
    <string name="ok">OK</string>
    <string name="hi_good_morning">Hi , Good Morning</string>
    <string name="your_checkups">Your Checkups</string>
    <string name="last_checkup">Last Checkup:</string>
    <string name="whitening">Whitening</string>
    <string name="more">More</string>
    <string name="my_whitening_average">Your Whitening Average</string>
    <string name="previous_my_whitening">Your Previous Whitening</string>
    <string name="brushing">Brushing</string>
    <string name="average_brushing_times">Average Brushing Times:</string>
    <string name="oral_hygiene">Oral Hygiene</string>
    <string name="you">You</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="checkup">Checkup</string>
    <string name="checkup_">checkup</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="select_your_checkup">Select your Checkup</string>
    <string name="regular_checkup">Regular Checkup</string>
    <string name="regular">Regular</string>
    <string name="toothache">Toothache</string>
    <string name="whitening_test">Whitening Test</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="gum_problem">Gum Problem</string>
    <string name="problem_associated_with_dental_hygiene">Problem associated with Dental Hygiene</string>
    <string name="problems_associated_with_previous_treatment">Problems associated with previous treatment</string>
    <string name="go_in_front_of_a_mirror">Go in front of a mirror.</string>
    <string name="use_your_cellphone_s_main_camera">Use your cellphone’s main camera.</string>
    <string name="the_pattern_should_be_matched_with_your_teeth">The pattern should be matched\nwith your teeth.</string>
    <string name="checkup_help_fourth_tip">When the app detects your teeth, it vibrates.\nthen you need to keep your phone still for\nfor a second to take a picture.</string>
    <string name="email_or_password_in_incorrect">Email or password is incorrect</string>
    <string name="back">Back</string>
    <string name="toothbrush">Toothbrush</string>
    <string name="dental_floss">Dental floss</string>
    <string name="mouthwash">Mouthwash</string>
    <string name="tongue_scraper">Tongue scraper</string>
    <string name="oral_irrigate">Oral irrigate</string>
    <string name="this_email_already_exists_sign_in">This email Address was registered before and you should sign in to the app.</string>
    <string name="this_email_not_exists_sign_up">This Email Address wasn\'t registered before. And you should Sign up for the app. </string>
    <string name="toothache_amp_tooth_sensitivity"><![CDATA[Toothache & Tooth sensitivity]]></string>
    <string name="toothache_amp_tooth_sensitivity_checkup"><![CDATA[Toothache & Tooth sensitivity checkup]]></string>
    <string name="general_problem">General Problem</string>
    <string name="treatment_issues">Treatment Issues</string>
    <string name="please_enter_your_email_address">Please enter Your Email address.</string>
    <string name="please_enter_your_new_password">Please enter your new password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="didn_t_get_a_code">Didn\'t get a code?</string>
    <string name="rich_limitation">You rich the limit of try. Pleas come back some other time</string>
    <string name="rich_limitation_and_try_after_24_hour">You rich limitation with this email. Please try after 24 hours</string>
    <string name="rich_limitation_try_other_time">You have tried several times by mistake. Try again in the next 24 hours.</string>
    <string name="please_check_your_email_for_a_message_with_your_code">Please check your email\nfor a message with your code.</string>
    <string name="upload_image">Upload image</string>
    <string name="not_verify_email">This Email-address has registered before but not verified.\nPlease enter the verification code, which has been sent to your email.</string>
    <string name="the_password_is_incorrect">The Password is incorrect</string>
    <string name="check_up">Check Up</string>
    <string name="checkup_desciption_one">Examination of\nyour teeth,\ngums, and mouth</string>
    <string name="checkup_description_two">The process of\nlightening\nthe color of teeth</string>
    <string name="checkup_description_three">Caused by problems\nsuch as cavities,\nabscessed teeth,\ntooth traumas, etc.</string>
    <string name="checkup_description_foure">Such as dental restoration\noverhang, improper root\ncanal treatment, restoration\n discoloration, etc.</string>
    <string name="checkup_description_five">such as gum bleeding,\nbad breath, oral lesions, etc.</string>
    <string name="internet_connection_problem">There is a problem with your connection.</string>
    <string name="upper_jaw">Upper jaw</string>
    <string name="lower_jaw">Lower jaw</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_">Cancel</string>
    <string name="please_select_a_tooth_that_hurts">Please select a tooth that hurts</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="month">Month</string>
    <string name="once_and_then_dissipated">Once and then dissipated</string>
    <string name="_1_how_long_has_it_been_hurting">1- How long has it been hurting?</string>
    <string name="days_">Days:</string>
    <string name="intermittent_mild">Intermittent, mild</string>
    <string name="if_severe_worsening">If severe, worsening</string>
    <string name="biting_pain">Biting pain</string>
    <string name="cold_less_than_30_linger_after_cold_gone">Cold, less than 30\'\' linger after cold gone</string>
    <string name="hot_cold_more_than_30_linger_after_stimulus_gone">Hot/cold, more than 30\'\' linger after stimulus gone</string>
    <string name="biting_pain_">Biting pain:</string>
    <string name="only_sometimes_or_a_sharp_electric_pain">Only sometimes or a sharp, electric pain.</string>
    <string name="with_every_bite">With every bite</string>
    <string name="sharp_or_electric">Sharp or electric</string>
    <string name="dull_aching">Dull, aching</string>
    <string name="throbbing">Throbbing</string>
    <string name="constant">Constant</string>
    <string name="wake_me_up_at_night">wake me up at night</string>
    <string name="upper">Upper</string>
    <string name="lower">Lower</string>
    <string name="check_question_title_two">2- Does anything bring on the pain?</string>
    <string name="checkup_question_title_three">3- Describe the pain</string>
    <string name="left">Left</string>
    <string name="problems_with_previous_treatment">Problems with Previous Treatment</string>
    <string name="oral_hygiene_score">Oral hygiene</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_speak_with_online_support">Do you want to\nspeak with online support?</string>
</resources>