<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewCheckupHistory"
        style="@style/CardViewCheckupHistory.Parent"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="42dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewCheckupType"
                style="@style/TextViewSecondaryLight"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="23dp"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:maxLines="1"
                android:paddingBottom="13dp"
                android:text="@string/problems_with_previous_treatment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewWhitening"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_marginStart="28dp"
                android:src="@drawable/ic_whitening"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCheckupType" />

            <TextView
                android:id="@+id/textViewWhiteningTitle"
                style="@style/TextViewGreen500.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/medium"
                android:text="@string/whitening"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/imageViewWhitening"
                app:layout_constraintStart_toEndOf="@id/imageViewWhitening" />


            <ImageView
                android:id="@+id/imageViewOral"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_oral"
                app:layout_constraintStart_toStartOf="@id/textViewCheckupType"
                app:layout_constraintTop_toBottomOf="@id/imageViewWhitening" />

            <TextView
                android:id="@+id/textViewOralHygieneTitle"
                style="@style/TextViewGreen500.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/medium"
                android:text="@string/oral_hygiene_score"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/imageViewOral"
                app:layout_constraintStart_toEndOf="@id/imageViewOral"
                app:layout_constraintTop_toTopOf="@id/imageViewOral" />

            <TextView
                android:id="@+id/textViewTime"
                style="@style/TextViewLight200.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/ic_clock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewWhiteningScore"
                style="@style/TextViewSecondaryLight.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="31dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/textViewWhiteningTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewWhiteningTitle" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewOralHygieneScore"
                style="@style/CardViewScoreStatusCheckupHistory"
                android:layout_width="45dp"
                android:layout_height="22dp"
                android:layout_marginEnd="19dp"
                android:visibility="gone"
                app:cardCornerRadius="19dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="@id/textViewOralHygieneTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewOralHygieneTitle">

                <TextView
                    android:id="@+id/textViewOralHygieneScore"
                    style="@style/TextViewSecondaryLight.Gray500Dark.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewMonthAndDay"
        style="@style/TextViewTextColor.Body2"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/ic_rectangle_4990"
        android:fontFamily="@font/medium"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/cardViewCheckupHistory"
        app:layout_constraintStart_toStartOf="@id/cardViewCheckupHistory"
        app:layout_constraintTop_toTopOf="@id/cardViewCheckupHistory" />

    <LinearLayout
        android:id="@+id/layoutYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cardViewCheckupHistory">

        <View
            android:layout_width="140dp"
            android:layout_height="1dp"
            android:background="@color/lightBorder" />

        <TextView
            android:id="@+id/textViewYear"
            style="@style/TextViewLight200.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <View
            android:layout_width="140dp"
            android:layout_height="1dp"
            android:background="@color/lightBorder" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>